[tool.poetry]
name = "promocodes-bot"
version = "0.1.0"
description = ""
authors = ["ksiim <makskrutchev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
