[tool.poetry]
name = "no-photographer-bot"
version = "0.1.0"
description = ""
authors = ["ksiim <makskrutchev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
sqlalchemy = "^2.0.35"
greenlet = "^3.1.0"
requests = "^2.32.3"
watchdog = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
